--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/web-n/Nodejs#readme",
   "dependencies": {
+    "cookie": "^0.4.0",
     "nodemon": "^1.19.2",
     "sanitize-html": "^1.18.2"
   },
